# AutoCodex

./: .gitignore  A00_main.py  A00_main_tui.py  A01_Routing_LayerPlanning.py  A01_agent_workflow.py  A01_agents.py  A01_coding_agent_workflow.py  A01_requiment_analysis_workflow.py  A02_RequirementIntake.py  A02_RequirementsAnalysis.py  A02_function_agents.py  A02_init_function_agents.py  A02_task_workflow.py  A03_RequirementsClarification.py  A03_RequirementsReview.py  A03_coding_agent_workflow.py  A08_OverallReview.py  A10_owner_agent_workflow.py  AGENTS.md  B00_agent_config.py  B01_codex_utils.py  B01_terminal_interaction.py  B02_log_tools.py  B03_init_function_agents.py  B04_human_prompts.py  C01_recover_requirement_workflow.py  C02_recover_task_workflow.py  C03_recover_coding_workflow.py  Prompt_04_RequirementsReview.py  Prompt_08_OverallReview.py  README.md  T01_tools.py  T02_tmux_agents.py  T03_agent_init_workflow.py  T05_hitl_runtime.py  T07_terminal_input.py  T08_pre_development.py  T09_terminal_ops.py  T11_tui_backend.py  T11_web_backend.py  (+11 more)
CanopyAutoCoding/: A00_main.py  A00_main_web.py  A01_Routing_LayerPlanning.py  A02_RequirementIntake.py  A02_RequirementsAnalysis.py  A03_RequirementsClarification.py  A05_DetailedDesign.py  (+39 more)
feishu_codex/: .gitignore  README.md  pyproject.toml
feishu_codex/src/feishu_codex_bridge/: __init__.py  backends.py  config.py  delivery.py  lark_cli_helper.py  main.py  models.py  parser.py  service.py  store.py
feishu_codex/tests/: test_backends.py  test_config.py  test_parser.py  test_service.py  test_store.py  test_tmux_runtime.py
(+168 files in other folders)
